--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>commons-jci-core</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>cglib</groupId>
+		    <artifactId>cglib-nodep</artifactId>
+		    <version>2.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-dbcp</groupId>
